@@ -1,3 +1,12 @@
+2008-06-27  Guillem Jover  <guillem@debian.org>
+
+	* dpkg-deb/build.c (do_build): Move string translation markers outside
+	of the string.
+	* src/help.c (ensure_pathname_nonexisting): Localize the 'failed'
+	variable instead of expecting gettext to magically infer the formatted
+	string.
+	* src/processarc.c (process_archive): Likewise.
+
 2008-06-27  Raphael Hertzog  <hertzog@debian.org>
 
 	* scripts/install-info.pl: Improve error message when the
